keep going with rules

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -77,11 +77,12 @@
     "- CD_2 <<< `in other words` && present tense\n",
     "- CD_3 <<< `so` && `it's` || `i'm`\n",
     "- CD_4 <<< `so this is` || `actually` && NOT `example` || `summary` || `next` || `last`\n",
+    "- CD_5 <<< `means` || `mean` || `given` || `define` || `explain` AND NO Present continuous tense (going to)\n",
     "- SM_1 <<< `Let's` && summarize\n",
     "- SM_2 <<< `in other words` && past tense\n",
-    "- SM_3 <<< `later` || `next time` || `last time` || `summary` || `summarize`\n",
+    "- SM_3 <<< `later` || `next time` || `last time` || `summary` || `summarize` || `here is` || `here are` || `discuss` || `next`\n",
     "- SM_4 <<< if (lineNr < 10 `OR` lineNr > fileLinesNr - 10) `&&` (past tense) =>> (within the first or last 10 lines + past tense)\n",
-    "- SM_5 <<< `going to` && `look` || `see` || `be` || `think`\n",
+    "- SM_5 <<< `going to` && `look` || `see` || `be` || `think` || `explain` || `explained` AND NO present tense (&& future or past)\n",
     "- AP_1 <<< `in other words` && `should` || `could` || `would`\n",
     "- AP_2 <<< `encourage` || `step` || `first` || `finally` || `second` || `should` || `could` || `would` || `best practice(s)` || `need to`\n",
     "- AP_3 <<< `if` && `use` || `can` || `should` || `could` || `want`\n",
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,19 +286,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Import modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import all necessary modules for EVERYTHING here\n",
@@ -325,143 +322,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rules implementaion"
+    "### Functions:\n",
+    "- Final label count \n",
+    "- title keywords exttract to search for CMs\n",
+    "- extract n-grams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### RULES #####\n",
-    "\n",
-    "### ------------------EX--------------------\n",
-    "def EX_1(sent):\n",
-    "    nrOfWordsFound = 0\n",
-    "    monograms = get_ngrams(sent, 1)\n",
-    "    bigrams = get_ngrams(sent, 2)\n",
-    "    \n",
-    "    if \"example\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"for instance\" in bigrams: nrOfWordsFound += 1\n",
-    "    elif \"assume\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"suppose\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"imagine\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"as\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"simulation\" in monograms: nrOfWordsFound += 1\n",
-    "    elif \"diagram\" in monograms: nrOfWordsFound += 1\n",
-    "        \n",
-    "    if nrOfWordsFound > 0:\n",
-    "        return \"EX\"\n",
-    "    else: \n",
-    "        return \"NOLBL\"\n",
-    "    \n",
-    "### ------------------EX--------------------\n",
-    "    \n",
-    "def EX_2(sent):\n",
-    "    mainWordNR = 0      # Let's\n",
-    "    secondaryWordsNR = 0     \n",
-    "    monograms = get_ngrams(sent, 1)\n",
-    "    bigrams = get_ngrams(sent, 2)\n",
-    "    trigrams = get_ngrams(sent, 3)\n",
-    "    \n",
-    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
-    "    \n",
-    "    if \"try\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"think\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"see\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"pick\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"take a look\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"say\" in monograms: secondaryWordsNR += 1\n",
-    "        \n",
-    "    if secondaryWordsNR > 0 and mainWordNR > 0:\n",
-    "        return \"EX\"\n",
-    "    else:\n",
-    "        return \"NOLBL\"\n",
-    "    \n",
-    "### -------------------CD-------------------\n",
-    "\n",
-    "def CD_1(sent):\n",
-    "    mainWordNR = 0      # Let's     # main word looking for in conjunction with one or more of the secondary words\n",
-    "    secondaryWordsNR = 0 \n",
-    "    negWords = 0      # words that must NOT occur for the label to apply, i.e. this should stay at ZERO\n",
-    "    monograms = get_ngrams(sent, 1)\n",
-    "    bigrams = get_ngrams(sent, 2)\n",
-    "    \n",
-    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
-    "    \n",
-    "    if \"look at\" in bigrams: secondaryWordsNR += 1\n",
-    "    elif \"make\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"put\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"do\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"start\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"prove\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"back\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"try\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"just\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"be\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"take\" in monograms: secondaryWordsNR += 1\n",
-    "    elif \"bring\" in monograms: secondaryWordsNR += 1\n",
-    "\n",
-    "    if \"example\" in monograms: negWords += 1\n",
-    "    if \"diagram\" in monograms: negWords += 1\n",
-    "    if \"assume\" in monograms: negWords += 1\n",
-    "    if \"imagine\" in monograms: negWords += 1\n",
-    "    if \"suppose\" in monograms: negWords += 1\n",
-    "        \n",
-    "    if secondaryWordsNR > 0 and mainWordNR > 0 and negWords == 0:\n",
-    "        return \"CD\"\n",
-    "    else:\n",
-    "        return \"NOLBL\"\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "def CD_2(sent):\n",
-    "    \n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "### Final label count method + title keywords exttract to search for CMs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "testSent = \"so let's just get rid of the ones we don't need, for example\"\n",
-    "res = EX_dictSearch(testSent)\n",
-    "# ----------- disregard the above test ---------\n",
+    "def get_ngrams(text, n):\n",
+    "    n_grams = ngrams(word_tokenize(text), n)\n",
+    "    return [' '.join(grams) for grams in n_grams]\n",
     "\n",
     "# WORKS - takes a file name\n",
     "# USE to find key words from tghe title and find the first occurence of the concepts in the text and label as CM\n",
@@ -533,37 +408,164 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
+   "source": [
+    "### Rules implementaion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### RULES #####\n",
+    "\n",
+    "### ------------------EX--------------------\n",
+    "def EX_1(sent):\n",
+    "    nrOfWordsFound = 0\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    \n",
+    "    words = {\"example\", \"for instance\", \"assume\", \"suppose\", \"imagine\", \"as\", \"simulation\", \"diagram\"}\n",
+    "    \n",
+    "    for wd in words:\n",
+    "        if len(wd) == 2:\n",
+    "            if wd in bigrams:\n",
+    "                secondaryWordsNR += 1\n",
+    "        else:\n",
+    "            if wd in monograms:\n",
+    "                secondaryWordsNR += 1\n",
+    "        \n",
+    "    if nrOfWordsFound > 0:\n",
+    "        return \"EX\"\n",
+    "    else: \n",
+    "        return \"NOLBL\"\n",
+    "    \n",
+    "### ------------------EX--------------------\n",
+    "    \n",
+    "def EX_2(sent):\n",
+    "    mainWordNR = 0      # Let's\n",
+    "    secondaryWordsNR = 0     \n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    trigrams = get_ngrams(sent, 3)\n",
+    "    \n",
+    "    words = {\"try\", \"think\", \"see\", \"pick\", \"take a look\", \"say\"}\n",
+    "    \n",
+    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
+    "    \n",
+    "    for wd in words:\n",
+    "        if len(wd) == 3:\n",
+    "            if wd in trigrams:\n",
+    "                secondaryWordsNR += 1\n",
+    "        if wd in monograms:\n",
+    "                secondaryWordsNR += 1\n",
+    "        \n",
+    "    #print(,\" \", \" \",)\n",
+    "    print(mainWordNR,\" \",secondaryWordsNR)\n",
+    "    if secondaryWordsNR > 0 and mainWordNR > 0:\n",
+    "        return \"EX\"\n",
+    "    else:\n",
+    "        return \"NOLBL\"\n",
+    "    \n",
+    "### -------------------CD-------------------\n",
+    "\n",
+    "def CD_1(sent):\n",
+    "    mainWordNR = 0      # Let's     # main word looking for in conjunction with one or more of the secondary words\n",
+    "    secondaryWordsNR = 0 \n",
+    "    negWords = 0      # words that must NOT occur for the label to apply, i.e. this should stay at ZERO\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    \n",
+    "    secondaryWords = {\"look at\", \"make\", \"put\", \"do\", \"start\", \"prove\", \"back\", \"try\", \"just\", \"be\", \"take\", \"bring\"}\n",
+    "    negWords = {\"example\", \"diagram\", \"assume\", \"imagine\", \"suppose\"}\n",
+    "    \n",
+    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
+    "    \n",
+    "    for wd in secondaryWords:\n",
+    "        if len(wd) == 2:\n",
+    "            if wd in bigrams:\n",
+    "                secondaryWordsNR += 1\n",
+    "        else:\n",
+    "            if wd in monograms:\n",
+    "                secondaryWordsNR += 1\n",
+    "    \n",
+    "    for wd in negWords:\n",
+    "        if wd in monograms:\n",
+    "                negWords += 1\n",
+    "    \n",
+    "    if secondaryWordsNR > 0 and mainWordNR > 0 and negWords == 0:\n",
+    "        return \"CD\"\n",
+    "    else:\n",
+    "        return \"NOLBL\"\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Main program"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-116-45b87129613f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcorrectLabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtotalSentences\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0maccuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcorrectLabels\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mtotalSentences\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m### ---------- Local variables - reset per file ------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1   1\n",
+      "EX\n",
+      "1   1\n",
+      "['NOLBL', 'EX', 'NOLBL']\n"
      ]
     }
    ],
    "source": [
+    "#---------------------------------------------- STUPID TEST EXAMPLE ------------------------------------\n",
+    "testSent = \"let's try to differentiate this function\"\n",
+    "res = EX_2(testSent)\n",
+    "print(res)\n",
+    "# ----------- disregard the above test ---------\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "### ---------- Global variables ----------------------------------------\n",
     "correctLabels = 0\n",
     "totalSentences = 0\n",
-    "accuracy = correctLabels / totalSentences\n",
+    "#accuracy = correctLabels / totalSentences\n",
     "\n",
     "### ---------- Local variables - reset per file ------------------------\n",
     "lineNR = 0\n",
@@ -571,20 +573,18 @@
     "curSentLabels = []          # All the labels assigned to the current sentence (to get majority vote from it later)\n",
     "\n",
     "originalLabel = \"\"          # label from the sentence\n",
-    "finalMajorityLabel = \"\"          # label assigned after the rules application\n",
+    "finalMajorityLabel = \"\"     # label assigned after the rules application SHOULD NOT BE MAJORITY, \n",
+    "                            # but at the end only one real label should be inside the list of labels after the evaluation\n",
     "finalMajorityLabelUsers = \"\"     # label assigned by other users (majority vote)\n",
     "##### ----------------------------------------------------------------------------------------------------- #####\n",
     "\n",
     "ignore_dict = ['inaudible','OMITTED','NUMBER','sound','music','laughter','yeah','blank_audio']\n",
     "\n",
-    "curSentLabels.append(EX_dictSearch(testSent))\n",
-    "curSentLabels.append(EX_lets(testSent))\n",
-    "curSentLabels.append(CD_lets(testSent))\n",
+    "curSentLabels.append(EX_1(testSent))\n",
+    "curSentLabels.append(EX_2(testSent))\n",
+    "curSentLabels.append(CD_1(testSent))\n",
     "\n",
-    "\n",
-    "def get_ngrams(text, n):\n",
-    "    n_grams = ngrams(word_tokenize(text), n)\n",
-    "    return [' '.join(grams) for grams in n_grams]\n",
+    "print(curSentLabels)\n",
     "\n",
     "# label_sentences(takesAFile)\n",
     "# get_ngrams(takesASentence)\n",
@@ -594,12 +594,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-33-ff68f0282bdc>, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-33-ff68f0282bdc>\"\u001b[1;36m, line \u001b[1;32m22\u001b[0m\n\u001b[1;33m    if (checkPastTense(sent) > 60)\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
+    "### TODO\n",
+    "\n",
     "def main(iFile, oPathNoExt):    # main application with all logic following the pseudocode=\n",
     "        print(\"[LABELLING file: ] \" + os.path.basename(iFile.name))\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
@@ -628,19 +637,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### RUN THIS PART - going over all files and calling the main program on each of them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO"
