tud metadata research

--- a/Python Scripts/TUD Library metadata.ipynb
+++ b/Python Scripts/TUD Library metadata.ipynb
@@ -21,7 +21,8 @@
     "- Another OAI link - https://books.bk.tudelft.nl/index.php/press/oai\n",
     "- All OAI repositories: http://www.openarchives.org/Register/BrowseSites\n",
     "- MERLOT: https://www.merlot.org/merlot/index.htm\n",
-    "\n"
+    "\n",
+    "- [Paper about doing federated search and & crosswalks of metadata](https://pdfs.semanticscholar.org/ceee/513a69b952bc1bdf176ec367c8742949bfdc.pdf)"
    ]
   },
   {
