continue the inference rules

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -71,20 +71,20 @@
     "\n",
     "-----------------------------------\n",
     "### ALL RULES\n",
-    "- EX_1 <<< `example` || OR `for instance` || `assume` || `suppose` || `imagine` || `as` || `simulation` || `diagram` [✔] \n",
-    "- EX_2 <<< `Let's` __&&__ try || think || see || pick || take a look || say .. [✔]\n",
-    "- CD_1 <<< `Let's` __&&__ look at || make || put || do || start || prove || evaluate || back || try || just __AND NO__ `example` || `assume` || `suppose` || `imagine` || `diagram` [✔]\n",
-    "- CD_2 <<< `in other words` || `basically` __AND NO__ `should` || `have to` || `must`\n",
-    "- CD_3 <<< `so` __&&__ `it's` || `i'm`\n",
+    "- [✔] EX_1 <<< `example` || OR `for instance` || `assume` || `suppose` || `imagine` || `as` || `simulation` || `diagram` \n",
+    "- [✔] EX_2 <<< `Let's` __&&__ try || think || see || pick || take a look || say ..\n",
+    "- [✔] CD_1 <<< `Let's` __&&__ look at || make || put || do || start || prove || evaluate || back || try || just __AND NO__ `example` || `assume` || `suppose` || `imagine` || `diagram`\n",
+    "- [✔] CD_2 <<< `in other words` || `basically` __AND NO__ `should` || `have to` || `must` \n",
+    "- [✔] CD_3 <<< `so` __&&__ `it's` || `i'm`\n",
     "- CD_4 <<< `so this is` || `actually` __AND NO__ `example` || `summary` || `next` || `last`\n",
     "- CD_5 <<< `means` || `mean` || `given` || `define` || `explain` __AND NO__ Present continuous tense (going to)\n",
-    "- SM_1 <<< `Let's` __&&__ summarize\n",
+    "- [✔] SM_1 <<< `Let's` __&&__ summarize || `recap` \n",
     "- SM_2 <<< `in other words` __&&__ past tense\n",
     "- SM_3 <<< `this week` || `this lesson` || `today` __&&__ present tense || future tense\n",
-    "- SM_4 <<< `later` || `next time` || `last time` || `summary` || `summarize` || `here is` || `here are` || `discuss` || `next`\n",
+    "- [✔] SM_4 <<< `later` || `next time` || `last time` || `summary` || `summarize` || `here is` || `here are` || `discuss` || `next` \n",
     "- SM_5 <<< if (lineNr < 10 `OR` lineNr > fileLinesNr - 10) __&&__ (past tense) =>> (within the first or last 10 lines + past tense)\n",
     "- SM_6 <<< `going to` __&&__ `look` || `see` || `be` || `think` || `explain` || `explained` __AND NO__ present tense (&& future or past)\n",
-    "- AP_1 <<< `in other words` __&&__ `should` || `could` || `would`\n",
+    "- [✔] AP_1 <<< `in other words` __&&__ `should` || `could` || `would` [✔]\n",
     "- AP_2 <<< `encourage` || `step` || `first` || `finally` || `second` || `should` || `could` || `would` || `best practice(s)` || `need to`\n",
     "- AP_3 <<< `if` __&&__ `use` || `can` || `should` || `could` || `want`\n",
     "- CM_1 <<< `called` __&&__ concept\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hidden": true
    },
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {
     "hidden": true
    },
@@ -753,19 +753,63 @@
     "\n",
     "### --------------------------------------\n",
     "\n",
+    "def CD_2(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    trigrams = get_ngrams(sent, 3)\n",
+    "    \n",
+    "    if (\"in other words\" or \"basically\") in monograms and not (\"should\" or \"must\") in monograms or not \"have to\" in bigrams:\n",
+    "        return \"CD\"\n",
+    "    else: return \"NOLBL\"\n",
+    "    \n",
+    "### --------------------------------------\n",
     "\n",
+    "def CD_3(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    if \"so\" in monograms and (\"it 's\" or \"it's\") or (\"i 'm\" or \"i'm\") in bigrams: return \"CD\"\n",
+    "    else: return \"NOLBL\"\n",
+    "    \n",
+    "### --------------------------------------\n",
+    "\n",
+    "def CD_4(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    trigrams = get_ngrams(sent, 3)\n",
+    "    if \"so this is\" in trigrams or \"actually\" in monograms and not ('example' or 'summary' or 'next' or 'last') in monograms: return \"CD\"\n",
+    "    else: return \"NOLBL\"\n",
+    "    \n",
+    "### --------------------------------------\n",
+    "def SM_1(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    \n",
+    "    if \"let's\" in bigrams or \"let 's\" in bigrams and \"summarize\" or \"recap\": return \"SM\"\n",
+    "    else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
     "\n",
-    "\n",
+    "def SM_4(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    \n",
+    "    words = {'later' , 'next time' , 'last time' , 'summary' , 'summarize' , 'here is' , 'here are' , 'discuss' , 'next', 'recap'}\n",
+    "    \n",
+    "    for wd in words:\n",
+    "        if len(wd) == 2:\n",
+    "            if wd in bigrams: return \"SM\"\n",
+    "        elif wd in monograms: return \"SW\"\n",
+    "        else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
     "\n",
-    "\n",
-    "\n",
-    "### --------------------------------------\n",
-    "\n",
-    "\n",
+    "def AP_1(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    trigrams = get_ngrams(sent, 3)\n",
+    "    \n",
+    "    if \"in other words\" in trigrams and (\"should\" or \"would\" or \"could\") in monograms: return \"AP\"\n",
+    "    else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
     "\n",
@@ -790,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {
     "hidden": true
    },
@@ -799,18 +843,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1   1\n",
-      "EX\n",
-      "1   1\n",
-      "['NOLBL', 'EX', 'NOLBL']\n"
+      "0   0\n",
+      "0   0\n",
+      "['NOLBL', 'NOLBL', 'NOLBL', 'CD', 'CD']\n"
      ]
     }
    ],
    "source": [
     "#---------------------------------------------- STUPID TEST EXAMPLE ------------------------------------\n",
-    "testSent = \"let's try to differentiate this function\"\n",
+    "testSent = \"so in other words you do that\"\n",
     "res = EX_2(testSent)\n",
-    "print(res)\n",
+    "#print(res)\n",
     "# ----------- disregard the above test ---------\n",
     "\n",
     "\n",
@@ -839,6 +882,8 @@
     "curSentLabels.append(EX_1(testSent))\n",
     "curSentLabels.append(EX_2(testSent))\n",
     "curSentLabels.append(CD_1(testSent))\n",
+    "curSentLabels.append(CD_2(testSent))\n",
+    "curSentLabels.append(CD_3(testSent))\n",
     "\n",
     "print(curSentLabels)\n",
     "\n",
