--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -85,12 +85,12 @@
     "- SM_5 <<< if (lineNr < 10 `OR` lineNr > fileLinesNr - 10) __&&__ (past tense) =>> (within the first or last 10 lines + past tense)\n",
     "- SM_6 <<< `going to` __&&__ `look` || `see` || `be` || `think` || `explain` || `explained` __AND NO__ present tense (&& future or past)\n",
     "- [✔] AP_1 <<< `in other words` __&&__ `should` || `could` || `would` [✔]\n",
-    "- AP_2 <<< `encourage` || `step` || `first` || `finally` || `second` || `should` || `could` || `would` || `best practice(s)` || `need to`\n",
-    "- AP_3 <<< `if` __&&__ `use` || `can` || `should` || `could` || `want`\n",
+    "- [✔] AP_2 <<< `encourage` || `step` || `first` || `finally` || `second` || `should` || `could` || `would` || `best practice(s)` || `need to`\n",
+    "- [✔] AP_3 <<< `if` __&&__ `use` || `can` || `should` || `could` || `want`\n",
     "- CM_1 <<< `called` __&&__ concept\n",
     "- CM_2 <<< `what is` .. __&&__ concept\n",
-    "- CM_3 <<< `theorem` || `algorithm` || `method` || `let's use`\n",
-    "- CM_4 <<< `let's` __&&__ `use`\n",
+    "- [✔] CM_3 <<< `theorem` || `algorithm` || `method` || `let's use` || `theory`\n",
+    "- [**X**] CM_4 <<< `let's` __&&__ `use` - **REPEATS CM_3** \n",
     "- CM_5 <<< first occurence of the terms in the title of the file\n",
     "\n",
     "-----------------------------------\n",
@@ -704,7 +704,7 @@
     "    \n",
     "    words = {\"try\", \"think\", \"see\", \"pick\", \"take a look\", \"say\"}\n",
     "    \n",
-    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
+    "    if (\"let's\" or \"let 's\") in bigrams: mainWordNR += 1\n",
     "    \n",
     "    for wd in words:\n",
     "        if len(wd) == 3:\n",
@@ -732,7 +732,7 @@
     "    secondaryWords = {\"look at\", \"make\", \"put\", \"do\", \"start\", \"prove\", \"back\", \"try\", \"just\", \"be\", \"take\", \"bring\"}\n",
     "    negWords = {\"example\", \"diagram\", \"assume\", \"imagine\", \"suppose\"}\n",
     "    \n",
-    "    if \"let's\" in bigrams or \"let 's\" in bigrams: mainWordNR += 1\n",
+    "    if (\"let's\" or \"let 's\") in bigrams: mainWordNR += 1\n",
     "    \n",
     "    for wd in secondaryWords:\n",
     "        if len(wd) == 2:\n",
@@ -784,7 +784,7 @@
     "    monograms = get_ngrams(sent, 1)\n",
     "    bigrams = get_ngrams(sent, 2)\n",
     "    \n",
-    "    if \"let's\" in bigrams or \"let 's\" in bigrams and \"summarize\" or \"recap\": return \"SM\"\n",
+    "    if (\"let's\" or \"let 's\") in bigrams and \"summarize\" or \"recap\" in monograms: return \"SM\"\n",
     "    else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
@@ -798,7 +798,7 @@
     "    for wd in words:\n",
     "        if len(wd) == 2:\n",
     "            if wd in bigrams: return \"SM\"\n",
-    "        elif wd in monograms: return \"SW\"\n",
+    "        elif wd in monograms: return \"SM\"\n",
     "        else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
@@ -810,6 +810,62 @@
     "    \n",
     "    if \"in other words\" in trigrams and (\"should\" or \"would\" or \"could\") in monograms: return \"AP\"\n",
     "    else: return \"NOLBL\"\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "def AP_2(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    words = {'encourage' , 'step' , 'first' , 'finally' , 'second' , 'should' , 'could' , 'would' , 'best practice', 'need to'}\n",
+    "    \n",
+    "    for wd in words:\n",
+    "        if len(wd) == 2:\n",
+    "            if wd in bigrams: return \"AP\"\n",
+    "        elif wd in monograms: return \"AP\"\n",
+    "        else: return \"NOLBL\"  \n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "def AP_3(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    \n",
+    "    if \"if\" in monograms and (\"use\" or \"can\" or \"should\", \"could\" or \"want\") in monograms: return \"AP\"\n",
+    "    else: return \"NOLBL\"\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "def CM_3(sent):\n",
+    "    monograms = get_ngrams(sent, 1)\n",
+    "    bigrams = get_ngrams(sent, 2)\n",
+    "    \n",
+    "    if (\"theory\" or \"theorem\" or \"algorithm\" or \"method\") in monograms or (\"let's\" or \"let 's\") in bigrams and \"use\" in monograms: return \"CM\"\n",
+    "    else: return \"NOLBL\"\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "### --------------------------------------\n",
+    "\n",
+    "\n",
     "\n",
     "### --------------------------------------\n",
     "\n",
