rules complete, now onto the main logic

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +753,6 @@
     "def CD_3(sent):\n",
     "    monograms = get_ngrams(sent, 1)\n",
     "    bigrams = get_ngrams(sent, 2)\n",
-    "    print(monograms[0])\n",
     "    \n",
     "    if monograms[0] == \"so\" and (\"it 's\" or \"it's\") or (\"i 'm\" or \"i'm\") in bigrams: return \"CD\"\n",
     "    else: return \"NOLBL\"\n",
@@ -773,7 +772,7 @@
     "    monograms = get_ngrams(sent, 1)\n",
     "    bigrams = get_ngrams(sent, 2)\n",
     "    \n",
-    "    if (\"mean\" or \"given\" or \"define\") and checkPRESENT(sent) >= 50 or \"going to\" in bigrams: return \"CD\"\n",
+    "    if (\"mean\" or \"given\" or \"define\") in monograms and checkPRESENT(sent) >= 50 or \"going to\" in bigrams: return \"CD\"\n",
     "    else: return \"NOLBL\"\n",
     "\n",
     "### --------------------------------------\n",
@@ -933,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +940,7 @@
      "output_type": "stream",
      "text": [
       "this\n",
-      "['NOLBL', 'NOLBL', 'NOLBL', 'CD', 'NOLBL', 'NOLBL', 'CD', 'NOLBL', 'NOLBL', 'NOLBL', 'SM', 'NOLBL', 'SM', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'CM']\n",
+      "['NOLBL', 'NOLBL', 'NOLBL', 'CD', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'SM', 'NOLBL', 'SM', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'NOLBL', 'CM']\n",
       "\n"
      ]
     }
