--- a/Python Scripts/CountingData.ipynb
+++ b/Python Scripts/CountingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Sentence and labels count + printing labeled sentences\n",
     "\n",
@@ -147,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -534,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -572,6 +578,64 @@
     "                                singleFile.write(line)\n",
     "                else:\n",
     "                    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\"\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "### go over the files and convert them to CSV   \n",
+    "\n",
+    "text = \"\"\n",
+    "\n",
+    "for root, subdirs, files in os.walk(path):\n",
+    "\n",
+    "    for curFile in os.listdir(root):\n",
+    "\n",
+    "        curFilePath = os.path.join(root, curFile)\n",
+    "\n",
+    "        if os.path.isdir(curFilePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            if curFilePath.endswith(\".txt\"):\n",
+    "                if curFilePath.endswith(\"_AutoRuleLabels.txt\"):\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
+    "                        iFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                        sentList = iFile.read().split('\\n')\n",
+    "\n",
+    "                        for sent in sentList:\n",
+    "                            if len(sent) > 0:\n",
+    "                                oFile.write(sent+\"\\n\")\n",
+    "                            else:\n",
+    "                                continue\n",
+    "            else:\n",
+    "                continue\n",
+    "\n",
+    "#with open(r'C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt', 'w') as oFile:\n",
+    "    \n",
+    "textsent = text.split(\"\\n\")\n",
+    "print(len(textsent))\n",
+    "\n",
+    "for line in textsent:\n",
+    "    print(line)"
    ]
   }
  ],
