preparing to run on another laptop as several exec needed

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hidden": true
    },
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "hidden": true
    },
@@ -555,7 +555,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Functions:\n",
     "- **avg**(list)\n",
@@ -571,9 +573,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    // TODO\\n    When this returns 0, we can update the value for the respective term in titleTermsSeen from 0 to 1 and \\n    we can call CM_4 for each term and it will work only if the term\\'s value is 0, \\n    so for each sentence:\\n        check dictionary, if value is 0, call CM_4\\n        if CM_4 returns a value \"CM\", then update the dictionary for that value with 1\\n        else don\\'t call CM_4 at all\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import operator\n",
     "\n",
@@ -766,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "hidden": true
    },
@@ -1062,7 +1077,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "#### TEST"
    ]
@@ -1070,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#---------------------------------------------- STUPID TEST EXAMPLE ------------------------------------\n",
@@ -1292,7 +1311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# TODO\n",
@@ -1323,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1460,8 @@
     "        accuracyEX = (correctEX / correctLabels) * 100\n",
     "        accuracySM = (correctSM / correctLabels) * 100\n",
     "        accuracyAP = (correctAP / correctLabels) * 100\n",
-    "        print(\"Accuracy: {0:.2f} % | CM = {1:.2f} % | CD = {2:.2f} % | AP = {3:.2f} % | EX = {4:.2f} % | SM = {5:.2f} % |\".format(accuracy, accuracyCM, accuracyCD, accuracyAP, accuracyEX, accuracySM))\n",
+    "        print(\"Accuracy: {0:.2f} %\".format(accuracy))\n",
+    "        #print(\"Accuracy: {0:.2f} % | CM = {1:.2f} % | CD = {2:.2f} % | AP = {3:.2f} % | EX = {4:.2f} % | SM = {5:.2f} % |\".format(accuracy, accuracyCM, accuracyCD, accuracyAP, accuracyEX, accuracySM))\n",
     "    except ZeroDivisionError:\n",
     "        pass\n",
     "    #print(\"Accuracy: {0:.2f} %\".format(accuracy))\n",
@@ -1453,16 +1475,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RUN THIS PART - going over all files and calling the main program on each of them"
+    "### ---RUN THIS PART--- (going over all files and calling the main program on each of them)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "#### With multiple files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'main' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-f862e82ab8bf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m                     \u001b[1;31m# Running the main method and assigning the tuple it returns to the local file tuple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m                     \u001b[0mcurFileRes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurFile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfileExtRemoved\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m                     \u001b[1;31m# ----------------------------------------------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'main' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TODO\n",
     "\n",
@@ -1530,11 +1574,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### With a single file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LABELLING file: ] allMerged.txt\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-d4754682779e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Running the main method and assigning the tuple it returns to the local file tuple\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mcurFileRes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurFile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfileExtRemoved\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;31m# ----------------------------------------------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-20-39ae9e75a8ba>\u001b[0m in \u001b[0;36mmain\u001b[1;34m(iFile, oPathNoExt)\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mfinalLabelSent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m     \u001b[0mtitleTermList\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtitle_getConcept\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moPathNoExt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m     \u001b[0mtermsSeenList\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m   \u001b[1;31m# will hold values for main terms\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[1;31m#accuracy = (countCorLabels/totalSentences) * 100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-a04122e51912>\u001b[0m in \u001b[0;36mtitle_getConcept\u001b[1;34m(oFileNoExt)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# remove all surrounding stuff like my naming convention etc from the title\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mmainTitlelist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moFileNoExt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"_\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mmaintitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmainTitlelist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mpunct\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'_'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'.'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0mfinaltitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "filePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMerged.txt\"\n",
+    "\n",
+    "curFile = open(filePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "fileExtRemoved = os.path.splitext(os.path.abspath(filePath))[0]\n",
+    "\n",
+    "# Running the main method and assigning the tuple it returns to the local file tuple\n",
+    "curFileRes = main(curFile, fileExtRemoved) \n",
+    "# ----------------------------------------------------------------------------------\n",
+    "\n",
+    "curFAccuracy,curFCM,curFCD,curFEX,curFSM,curFAP = curFileRes  # assigning parts of tuple to variables\n",
+    "\n",
+    "curFile.close()\n",
+    "\n",
+    "end = time.time()\n",
+    "print(\"\\nExecution time: {0:.2f} min\".format((end - start)/60))"
+   ]
   }
  ],
  "metadata": {
