trying to improve intent mining & preprocessing data for NBayes

--- a/Python Scripts/CountingData.ipynb
+++ b/Python Scripts/CountingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,18 +582,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\"\n",
     "\n",
@@ -614,10 +605,10 @@
     "\n",
     "        else:\n",
     "            if curFilePath.endswith(\".txt\"):\n",
-    "                if curFilePath.endswith(\"_AutoRuleLabels.txt\"):\n",
+    "                if not curFilePath.endswith(\"_AutoRuleLabels.txt\"):\n",
     "                    continue\n",
     "                else:\n",
-    "                    with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
+    "                    with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMergedLabeled.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
     "                        iFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
     "                        sentList = iFile.read().split('\\n')\n",
     "\n",
@@ -631,11 +622,7 @@
     "\n",
     "#with open(r'C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt', 'w') as oFile:\n",
     "    \n",
-    "textsent = text.split(\"\\n\")\n",
-    "print(len(textsent))\n",
-    "\n",
-    "for line in textsent:\n",
-    "    print(line)"
+    "textsent = text.split(\"\\n\")"
    ]
   }
  ],
